@@ -133,6 +133,7 @@ Version 1.13.0-dev:
      as if a human / ai ordered the command. These are intended to facilitate
      making some kinds of noninteractive unit tests.
    * Support for total conversions, so called "cores".  
+   * Fix bug #22030: correct index of weapon special disable in attack GUI
 
 Version 1.11.11:
  * Add-ons server:
